# apps/example/openapi.json
@@ -3,11 +3,46 @@
   "info": {
     "title": "Next REST Framework",
     "description": "This is an autogenerated OpenAPI spec by Next REST Framework.",
-    "version": "0.7.2"
+    "version": "0.8.0"
   },
   "components": {},
   "paths": {
-    "/api/todos": {
+    "/api/api-routes/dynamic/{slug}": {
+      "get": {
+        "requestBody": {
+          "content": {}
+        },
+        "responses": {
+          "default": {
+            "description": "An unknown error occurred, trying again might help.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "slug",
+            "in": "query"
+          }
+        ]
+      }
+    },
+    "/api/api-routes/todos": {
       "get": {
         "requestBody": {
           "content": {}
@@ -15,21 +50,21 @@
         "responses": {
           "200": {
             "content": {
-              "application/json": {
+              "text/html": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "string"
-                      },
-                      "name": {
-                        "type": "string"
-                      },
-                      "completed": {
-                        "type": "boolean"
-                      }
+                  "type": "object",
+                  "properties": {
+                    "foo": {
+                      "type": "string"
+                    },
+                    "bar": {
+                      "type": "string"
+                    },
+                    "baz": {
+                      "type": "string"
+                    },
+                    "qux": {
+                      "type": "string"
                     }
                   }
                 }
@@ -60,8 +95,11 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "foo": {
                     "type": "string"
+                  },
+                  "bar": {
+                    "type": "number"
                   }
                 }
               }
@@ -75,14 +113,155 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "id": {
+                    "foo": {
                       "type": "string"
                     },
-                    "name": {
+                    "bar": {
+                      "type": "number"
+                    },
+                    "query": {
+                      "type": "object",
+                      "properties": {
+                        "test": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unknown error occurred, trying again might help.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "test",
+            "in": "query"
+          }
+        ]
+      },
+      "put": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "foo": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "bar": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  },
+                  "baz": {
+                    "type": "number"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "foo": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "bar": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    },
+                    "bar": {
+                      "type": "number"
+                    },
+                    "query": {
+                      "type": "object",
+                      "properties": {
+                        "test": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unknown error occurred, trying again might help.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "test",
+            "in": "query"
+          }
+        ]
+      }
+    },
+    "/api/routes/todos": {
+      "get": {
+        "requestBody": {
+          "content": {}
+        },
+        "responses": {
+          "200": {
+            "content": {
+              "text/html": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "foo": {
                       "type": "string"
                     },
-                    "completed": {
-                      "type": "boolean"
+                    "bar": {
+                      "type": "string"
+                    },
+                    "baz": {
+                      "type": "string"
+                    },
+                    "qux": {
+                      "type": "string"
                     }
                   }
                 }
@@ -105,6 +284,156 @@
             }
           }
         }
+      },
+      "post": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "foo": {
+                    "type": "string"
+                  },
+                  "bar": {
+                    "type": "number"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "foo": {
+                      "type": "string"
+                    },
+                    "bar": {
+                      "type": "number"
+                    },
+                    "query": {
+                      "type": "object",
+                      "properties": {
+                        "test": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unknown error occurred, trying again might help.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "test",
+            "in": "query"
+          }
+        ]
+      },
+      "put": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "foo": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "bar": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  },
+                  "baz": {
+                    "type": "number"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "foo": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "bar": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    },
+                    "bar": {
+                      "type": "number"
+                    },
+                    "query": {
+                      "type": "object",
+                      "properties": {
+                        "test": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unknown error occurred, trying again might help.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "test",
+            "in": "query"
+          }
+        ]
       }
     }
   }
